# cpp-embedded-resource

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Readme.md  Readme.md-old
CMakeModules/: FindEmbeddedResource.cmake
CMakeTools/: EmbeddedResource.cmake
include/erc/: compress.h  debug_stream.h  file.h  file_id.h  file_stream.h  inventory_package.h  istream.hpp  package.h  package_id.h  package_manager.h  types.h
include/erc/classes/: forceinline.hpp  non_copyable.hpp  non_copyable_movable.hpp
include/erc/maker/: erc_file_parser.h  erc_files_list.h  erc_package_file_parser.h  model.h  src_file_generator.h  src_generator.h
include/erc/maker/generator/: src_file.h  src_header_embedded_files.h  src_header_package.h  src_package.h
include/erc_maker/: cache_inventory_manager.h  custom_unordered_set.h  erc_file_identifier.h  erc_files_list.h  erc_inventory.h  erc_package_file_parser.h  erc_prepared_package.h  file_system.h  hash.h  model.h  src_generator.h  src_internal_names.h  types.h
src/embedded_resource_packager/: for_cmake_target.cpp  for_generation.cpp  head.hpp  main.cpp
src/erc/: compress.cpp  file.cpp  file_stream.cpp  inventory_package.cpp  package.cpp  package_manager.cpp
src/erc_maker/: cache_inventory_manager.cpp  erc_files_list.cpp  erc_inventory.cpp  erc_package_file_parser.cpp  erc_prepared_package.cpp  file_system.cpp  hash.cpp  src_generator.cpp  src_internal_names.cpp
src/erc_maker/generator/: cache_manager.cpp  file.cpp  header_package.cpp  inventory.cpp  package.cpp
src/maker/: erc_file_parser.cpp  erc_files_list.cpp  erc_package_file_parser.cpp  src_file_generator.cpp  src_generator.cpp
src/maker/generator/: cache_manager.cpp  file.cpp  header_embedded_files.cpp  header_package.cpp  package.cpp
tests/: CMakeLists.txt  main.cpp  test_helper.hpp  tests_directories.h
tests/_off/tests_static_erc/: erc_c00a0e03b8eaf16e7f78d565caf17e6f4f357381c5a4c192fc7b68cc81a76759.cpp  inventory_aaaa.cpp  pack_23584ec6c611217305b83264fd8f62ebdeb601203511ae646d8f4756e4bb19be.cpp
tests/_off/unitstest_program_erc/: erc_0bae783a95387011f43b17e68bf755cff5251ef76f1883f544a016d59b2834ce.cpp  erc_1c61b34033a91b58ac9f3e9dcace424e1629b61968fba90894ada4a52d9d080e.cpp  erc_653e63d82575d14c9c81a84a85a04329f58667371418f74eb5bde9cfdd105287.cpp  erc_dc38661187367d67421b5ca48a25ba444c6b19e7aa6bfddd9a7568f78e396b2d.cpp  pack_39b7c4c30a81a4f37b63c68e58a833a27ad5b7c0eea9ddfe27adfb780a13ae09.cache  pack_39b7c4c30a81a4f37b63c68e58a833a27ad5b7c0eea9ddfe27adfb780a13ae09.h  pack_8cff6884e39a8c83a2d3550b959a6e8946e09a3f292d261da948475d8e5c2ebf.h
tests/relative_directory/: composed_ressource.erc  relative_directory_resource.erc
tests/relative_directory/resource/: file3.txt
tests/relative_files/: composed_resource.hpp  composed_ressource.erc  composed_ressourcebis.erc  good_maker_generator.cpp  good_maker_listener.cpp  good_maker_parser.cpp  good_package.cpp
tests/relative_files/sub_dir/: sub_file1.txt  sub_file2.txt
tests/tests_shared/: get_shared_lib.cpp  get_shared_lib.hpp  source_info.erc  source_info.txt
tests/tests_static/: get_static_lib.cpp  get_static_lib.hpp  source_info.txt
tests/tests_static/erc/: pack_23584ec6c611217305b83264fd8f62ebdeb601203511ae646d8f4756e4bb19be.cache  pack_23584ec6c611217305b83264fd8f62ebdeb601203511ae646d8f4756e4bb19be.cpp  pack_23584ec6c611217305b83264fd8f62ebdeb601203511ae646d8f4756e4bb19be.h
tests/unitstest_program/: good_maker_generator.cpp  good_maker_listener.cpp  good_maker_parser.cpp  good_package.cpp  good_package_message.cpp  relative_files_resource_test_helper.cpp  source_info.txt  tests_directories.h
tests/unitstest_program/erc/: erc_16bf581f35d93722d4f1c2b44c13a928bce0dfbb517e093f45b67d3b151078f7.cpp  erc_22a216deb1e39f8ed47c894edaa3dab7a1ea9e79dd0e96b71c25b746ee7bd2ba.cpp  erc_61edf613e2b700d01ff389bf9b9f72abd99264891846757126b2ceaafc40013d.cpp  erc_87ef64e4097b66e632ef2f78385bb424c89c13dea7e0a20e9a3d0ef89921c1af.cpp  inventory_bbbb.cpp  pack_39b7c4c30a81a4f37b63c68e58a833a27ad5b7c0eea9ddfe27adfb780a13ae09.cpp  pack_8cff6884e39a8c83a2d3550b959a6e8946e09a3f292d261da948475d8e5c2ebf.cache  pack_8cff6884e39a8c83a2d3550b959a6e8946e09a3f292d261da948475d8e5c2ebf.cpp
tools/: CMakeLists.txt  basic_zlib_compression_string.cpp  tiptop.cpp
